<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/botBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222227"
    android:backgroundTint="#222227"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingTop="24dp"
    tools:context=".userinfos">

    <LinearLayout
        android:id="@+id/sup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="0"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_back1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/back"
            android:scaleType="center"
            app:srcCompat="@drawable/backic" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/calistobold"
            android:gravity="start"
            android:text="@string/your_infos"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/e_mail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="0"
        android:background="@drawable/testlines"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/ic_e_mail"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_email" />

        <TextView
            android:id="@+id/txt_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/flareserif"
            android:text="@string/e_mail"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/uid"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="0"
        android:background="@drawable/testlines"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/ic_id1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_id" />

        <TextView
            android:id="@+id/txt_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/flareserif"
            android:text="@string/id"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/referral"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="0"
        android:background="@drawable/testlines"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/ic_referral"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_show_ref" />

        <TextView
            android:id="@+id/txt_ref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/flareserif"
            android:text="@string/referral_program"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/referral_go"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:contentDescription="@string/click_to_view_your_transaction_history"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_back" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="0"
        android:background="@drawable/testlines"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/ic_transaction"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_history" />

        <TextView
            android:id="@+id/txt_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/flareserif"
            android:text="@string/view_transaction_information"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/transaction_go"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:contentDescription="@string/click_to_view_your_transaction_history"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_back" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="0"
        android:background="@drawable/testlines"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/ic_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_pass" />

        <TextView
            android:id="@+id/txt_change_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/flareserif"
            android:text="@string/change_account_password"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/change_pass_go"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:contentDescription="@string/click_to_go_change_your_password"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_back" />
    </LinearLayout>
</LinearLayout>