<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/botBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232227"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/resetpassback"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <com.nenno.dennoearningapp.StrokeTextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/calistobold"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/forgot_your_password"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:stv_strokeColor="#232227"
                app:stv_strokeIs="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/line288dp"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/txt_msg"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/flareserif"
            android:gravity="center|left"
            android:text="@string/type_email"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/getEmail"
            android:layout_width="244dp"
            android:layout_height="48dp"
            android:background="@drawable/inputlayout"
            android:ems="10"
            android:fontFamily="@font/flareserif"
            android:hint="@string/type_your_e_mail_address"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="#232227"
            android:textColorHint="#FF535353"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/sup_btns"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_cancel"
                android:layout_width="144dp"
                android:layout_height="60dp"
                android:background="@drawable/another_btn_click"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="12dp">

                <TextView
                    android:id="@+id/txt_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calistobold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/cancel"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_send"
                android:layout_width="144dp"
                android:layout_height="60dp"
                android:background="@drawable/mini_btn_click"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="12dp">

                <TextView
                    android:id="@+id/txt_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calistobold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/send"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>